...
        postViewModel.fetchPostList()
    }

    Column (
        Modifier.background(Color.White)
    ) {
        TopNavigationBar("Feed", shouldNavigate = false) {
            IconButton(onClick = {
                if (currentUser == null) {
                    showNonUserDialog = true
                } else {
                    navController.navigate(NavigationDestination.CreatePost)
                }
...
