...
                        if (accessToken.isNullOrEmpty()) NavigationDestination.Onboard
                        else NavigationDestination.MainPage
                    )

                    if (!error?.body().isNullOrEmpty()) {
                        CustomDialog(
                            title = "에러",
                            body = error?.body() ?: "",
                            onDismissRequest = { apiErrorController.dismiss() },
                            confirm = { apiErrorController.dismiss() }
                        )
                    }
                }
...
